tests/expectations/compiler/function/call_external_submodule_fn.out
program child.aleo;

function main:
    input r0 as u32.public;
    output r0 as u32.private;

constructor:
    assert.eq edition 0u16;
// --- Next Program --- //
import child.aleo;
program parent.aleo;

function main:
    input r0 as u32.private;
    add r0 1u32 into r1;
    output r1 as u32.private;

constructor:
    assert.eq edition 0u16;


---
Note: Treating dependencies as Aleo produces different results:

Error [ETYC0372005]: Unknown function `child.aleo::helpers::bump`
    --> compiler-test:7:16
     |
   7 |         return child.aleo::helpers::bump(x);
     |                ^^^^^^^^^^^^^^^^^^^^^^^^^
